k8s/manifests-logging/elasticsearch.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  labels:
    name: elasticsearch
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      name: elasticsearch
  template:
    metadata:
      labels:
        name: elasticsearch
    spec:
      containers:
       - image: elasticsearch:8.6.2
         name: elasticsearch
         ports:
          - name: elasticsearch
            containerPort: 9200
         resources:
          requests:
            memory: "1Gi"
            cpu: "1000m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    name: elasticsearch
  namespace: kube-system
spec:
  ports:
  - port: 9200
    targetPort: 9200
  selector:
    name: elasticsearch
