k8s/manifests-logging/kibana.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    name: kibana
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      name: kibana
  template:
    metadata:
      labels:
        name: kibana
    spec:
      containers:
       - image: kibana:8.6.2
         name: kibana
         ports:
          - name: kibana
            containerPort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    name: kibana
  namespace: kube-system
spec:
  ports:
  - port: 80
    targetPort: 5601
  selector:
    name: kibana
